Chore: Fixed checkstyle violations and replaced now-private class field accessors with getter calls